--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,32 @@
-/* You can add global styles to this file, and also import other style files */
+@import "~@angular/material/prebuilt-themes/indigo-pink.css"
+
+body 
+  padding: 0
+  margin: 0
+  min-height: 100vh
+
+.mat-card
+  margin: 20px auto
+  max-width: 768px
+
+input,
+.mat-form-field
+  width: 100%
+
+table
+  overflow-x: auto !important
+  min-width: 100%
+
+th, td
+  white-space: nowrap
+  padding: 0 16px !important  
+
+.overflow-auto
+  overflow: auto
+
+.spacer
+  flex: 1 1 auto
+
+.container
+  max-width: 700px
+  margin: auto
