Salas de teatro

--- a/src/app/core/sala-teatro/teatro-list/teatro-list.component.html
+++ b/src/app/core/sala-teatro/teatro-list/teatro-list.component.html
@@ -1,3 +1,4 @@
+<div class="container">
 <mat-card class="mat-elevation-z8">
   <mat-card-header>
     <mat-card-title>Salas de teatro</mat-card-title>
@@ -55,3 +56,4 @@
     <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
   </mat-card-content>
 </mat-card>
+</div>
