--- a/src/app/core/navigation/navigation.component.html
+++ b/src/app/core/navigation/navigation.component.html
@@ -9,7 +9,7 @@
         <mat-icon mat-list-icon>attach_money</mat-icon>
         <h4 mat-line i18n="@@promocoesTitle">Promoções</h4>
       </a>
-      <a mat-list-item routerLink="#">
+      <a mat-list-item routerLink="teatro">
         <mat-icon mat-list-icon>theaters</mat-icon>
         <h4 mat-line i18n="@@salaTeatroTitle">Sala de Teatro</h4>
       </a>
