--- a/src/app/core/sala-teatro/teatro-list/teatro-list.component.html
+++ b/src/app/core/sala-teatro/teatro-list/teatro-list.component.html
@@ -14,7 +14,7 @@
   </mat-card-header>
   <mat-card-content>
     <div class="overflow-auto">
-      <div *ngIf="isLoading">
+      <div *ngIf="isLoading" style="display: flex; flex-direction: row">
         <div class="spacer"></div>
         <mat-spinner></mat-spinner>
         <div class="spacer"></div>
