--- a/src/app/core/sala-teatro/form/form.component.html
+++ b/src/app/core/sala-teatro/form/form.component.html
@@ -19,7 +19,7 @@
   </mat-form-field>
   <mat-form-field appearance="fill" fxFlex *ngIf="!edit">
     <mat-label>Senha</mat-label>
-    <input matInput type="password" formControlName="senha">
+    <input matInput type="password" formControlName="password">
     <mat-error>Campo obrigatório</mat-error>
   </mat-form-field>
   <mat-form-field appearance="fill" fxFlex>
