--- a/src/app/core/navigation/navigation.component.html
+++ b/src/app/core/navigation/navigation.component.html
@@ -13,7 +13,7 @@
         <mat-icon mat-list-icon>theaters</mat-icon>
         <h4 mat-line i18n="@@salaTeatroTitle">Sala de Teatro</h4>
       </a>
-      <a mat-list-item routerLink="#">
+      <a mat-list-item routerLink="site">
         <mat-icon mat-list-icon>credit_card</mat-icon>
         <h4 mat-line i18n="@@siteVendasTitle">Site de Vendas</h4>
       </a>
