--- a/src/app/core/navigation/navigation.component.html
+++ b/src/app/core/navigation/navigation.component.html
@@ -5,7 +5,7 @@
       [opened]="(isHandset$ | async) === false">
     <mat-divider></mat-divider>
     <mat-nav-list>
-      <a mat-list-item routerLink="#">
+      <a mat-list-item routerLink="promocao">
         <mat-icon mat-list-icon>attach_money</mat-icon>
         <h4 mat-line i18n="@@promocoesTitle">Promoções</h4>
       </a>
