--- a/src/app/core/promocao/promocao-list/promocao-list.component.html
+++ b/src/app/core/promocao/promocao-list/promocao-list.component.html
@@ -1,12 +1,13 @@
 <div class="container">
 <mat-card class="mat-elevation-z8">
   <mat-card-header>
-    <mat-card-title>Promoções</mat-card-title>
-    <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Menu" class="menu">
+    <mat-card-title *ngIf="!isMine">Promoções</mat-card-title>
+    <mat-card-title *ngIf="isMine">Minhas promoções</mat-card-title>
+    <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Menu" class="menu" *ngIf="isMine || isAdmin()">
       <mat-icon>more_vert</mat-icon>
     </button>
     <mat-menu #menu="matMenu">
-      <a mat-menu-item routerLink="new">
+      <a mat-menu-item routerLink="/promocao/new">
         <mat-icon>add</mat-icon>
         <span>novo</span>
       </a>
@@ -14,12 +15,13 @@
   </mat-card-header>
   <mat-card-content>
     <div class="overflow-auto">
+      <a mat-button color="primary" *ngIf="!isMine && isRoleTeatro()" routerLink="mine">Minhas promoções</a>
       <div *ngIf="isLoading" style="display: flex; flex-direction: row">
         <div class="spacer"></div>
         <mat-spinner></mat-spinner>
         <div class="spacer"></div>
       </div>
-      <p style="color: red; margin: auto;" *ngIf="hasError">Ocorreu um erro ao buscar salas de teatro.</p>
+      <p style="color: red; margin: auto;" *ngIf="hasError">Ocorreu um erro ao buscar informações.</p>
       <table mat-table [dataSource]="dataSource" matSort *ngIf="!isLoading && !hasError">
       	<ng-container matColumnDef="nome">
           <th mat-header-cell *matHeaderCellDef mat-sort-header> Nome </th>
@@ -49,7 +51,7 @@
         <ng-container matColumnDef="acoes">
           <th mat-header-cell *matHeaderCellDef></th>
           <td mat-cell *matCellDef="let element" align="end">
-            <a mat-icon-button color="primary" [routerLink]="element.id"><mat-icon>edit</mat-icon></a>
+            <a mat-icon-button color="primary" routerLink="/promocao/{{element.id}}"><mat-icon>edit</mat-icon></a>
             <a mat-icon-button color="warn" (click)="delete(element.id)"><mat-icon>clear</mat-icon></a>
           </td>
         </ng-container>
