--- a/src/app/core/promocao/form/form.component.html
+++ b/src/app/core/promocao/form/form.component.html
@@ -1,8 +1,8 @@
 <ng-container *ngIf="!edit; else edition">
-  <h1 class="mat-h1">Nova sala de teatro</h1>
+  <h1 class="mat-h1">Nova promoção</h1>
 </ng-container>
 <ng-template #edition>
-  <h1 class="mat-h1">Editar sala de teatro</h1>
+  <h1 class="mat-h1">Editar promoção</h1>
 </ng-template>
 <form [formGroup]="form"
       fxLayout="column"
