--- a/src/app/core/promocao/promocao-list/promocao-list.component.html
+++ b/src/app/core/promocao/promocao-list/promocao-list.component.html
@@ -35,7 +35,7 @@
 
         <ng-container matColumnDef="teatro_nome">
           <th mat-header-cell *matHeaderCellDef mat-sort-header> Nome do teatro </th>
-          <td mat-cell *matCellDef="let element"> {{ element.taetro.nome }} </td>
+          <td mat-cell *matCellDef="let element"> {{ element.teatro.nome }} </td>
         </ng-container>
 
         <ng-container matColumnDef="url_site">
